Hero overhaul: rounded corners, no portrait border, subtle oval, heading overlap, solid CTA, smaller brand name

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <span class="hero__pre" data-en="Spiritual Guide &amp; Energy Healer" data-ru="Духовный проводник и энергопрактик">Spiritual Guide &amp; Energy Healer</span>
         <p class="hero__sub" data-en="Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world." data-ru="Что-то привело тебя сюда. То же самое, что шепчет в 3 часа ночи, что посылает мурашки по телу во время медитации, что заставляет чувствовать — ты не совсем&nbsp;отсюда.">Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world.</p>
         <div class="hero__cta">
-          <a href="https://t.me/ameliafromlyra" target="_blank" class="btn btn--outline-light" data-en="Begin Your Awakening" data-ru="Начни своё Пробуждение">Begin Your Awakening</a>
+          <a href="https://t.me/ameliafromlyra" target="_blank" class="btn btn--primary" data-en="Begin Your Awakening" data-ru="Начни своё Пробуждение">Begin Your Awakening</a>
         </div>
       </div>
     </div>
