Redesign: Renew-style hero (circle portrait + video side-by-side), dark intro section with faded AWAKEN text

--- a/index.html
+++ b/index.html
@@ -96,38 +96,37 @@
     <a href="https://t.me/ameliafromlyra" target="_blank" class="btn btn--primary mobile-menu__cta" data-en="Book a Session" data-ru="Записаться">Book a Session</a>
   </div>
 
-  <!-- ========== 1. HERO — Rectangular video on light background (Renew-style) ========== -->
+  <!-- ========== 1. HERO — Heading + portrait circle + video side-by-side (Renew-style) ========== -->
   <section class="hero hero--home">
-    <!-- Brand name above rectangle -->
     <div class="hero__brand" data-en="Awaken with Amelia" data-ru="Awaken with Amelia">Awaken with Amelia</div>
 
-    <!-- Rectangular video with content overlaid -->
-    <div class="hero__rect">
-      <video autoplay loop muted playsinline poster="assets/hero-cosmic.jpg">
-        <source src="assets/nature-bg.mp4" type="video/mp4">
-      </video>
-      <div class="hero__content">
-        <h1 data-en="You Already &lt;em&gt;Know&lt;/em&gt;" data-ru="Ты Уже &lt;em&gt;Знаешь&lt;/em&gt;">You Already <em>Know</em></h1>
-        <div class="hero__oval">
-          <img src="assets/selfie-casual.jpg" alt="Amelia Lira">
-        </div>
-        <span class="hero__pre" data-en="Spiritual Guide &amp; Energy Healer" data-ru="Духовный проводник и энергопрактик">Spiritual Guide &amp; Energy Healer</span>
-        <p class="hero__sub" data-en="Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world." data-ru="Что-то привело тебя сюда. То же самое, что шепчет в 3 часа ночи, что посылает мурашки по телу во время медитации, что заставляет чувствовать — ты не совсем&nbsp;отсюда.">Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world.</p>
-        <div class="hero__cta">
-          <a href="https://t.me/ameliafromlyra" target="_blank" class="btn btn--primary" data-en="Begin Your Awakening" data-ru="Начни своё Пробуждение">Begin Your Awakening</a>
-        </div>
+    <h1 data-en="You Already &lt;em&gt;Know&lt;/em&gt;" data-ru="Ты Уже &lt;em&gt;Знаешь&lt;/em&gt;">You Already <em>Know</em></h1>
+
+    <!-- Side-by-side: circle portrait + video rectangle -->
+    <div class="hero__media">
+      <div class="hero__oval">
+        <img src="assets/selfie-casual.jpg" alt="Amelia Lira">
       </div>
+      <div class="hero__video">
+        <video autoplay loop muted playsinline poster="assets/hero-cosmic.jpg">
+          <source src="assets/nature-bg.mp4" type="video/mp4">
+        </video>
+      </div>
+    </div>
+
+    <span class="hero__pre" data-en="Spiritual Guide &amp; Energy Healer" data-ru="Духовный проводник и энергопрактик">Spiritual Guide &amp; Energy Healer</span>
+    <p class="hero__sub" data-en="Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world." data-ru="Что-то привело тебя сюда. То же самое, что шепчет в 3 часа ночи, что посылает мурашки по телу во время медитации, что заставляет чувствовать — ты не совсем&nbsp;отсюда.">Something brought you here. The same something that whispers at 3am, that sends chills through your body during meditation, that makes you feel like you don't quite belong in this&nbsp;world.</p>
+    <div class="hero__cta">
+      <a href="https://t.me/ameliafromlyra" target="_blank" class="btn btn--primary" data-en="Begin Your Awakening" data-ru="Начни своё Пробуждение">Begin Your Awakening</a>
     </div>
   </section>
 
-  <!-- ========== 2. INTRODUCTION ========== -->
+  <!-- ========== 2. INTRODUCTION — Dark background with faded text (Renew-style) ========== -->
   <section class="section-intro">
+    <div class="intro__bg-text" data-en="AWAKEN" data-ru="ПРОБУЖДЕНИЕ">AWAKEN</div>
     <div class="container">
       <div class="intro__grid">
-        <div class="intro__image fade-in-left">
-          <img src="assets/portrait-natural.jpg" alt="Amelia Lira" style="background-color: #EDE8E0;">
-        </div>
-        <div class="intro__text fade-in-right">
+        <div class="intro__text fade-in-left">
           <span class="eyebrow" data-en="Nice to meet you" data-ru="Приятно познакомиться">Nice to meet you</span>
           <h2 data-en="I'm Amelia" data-ru="Я — Амелия">I'm Amelia</h2>
           <p data-en="I see what most people can't. And I help you see it too." data-ru="Я вижу то, что большинство не видит. И помогаю тебе увидеть тоже.">I see what most people can't. And I help you see it too.</p>
@@ -135,13 +134,15 @@
           <p data-en="But here's what matters: I don't fix you. You were never broken.&lt;br&gt;&lt;br&gt;I help you remember who you actually are. And when you remember — everything changes." data-ru="Но вот что важно: я тебя не чиню. Ты никогда не была сломана.&lt;br&gt;&lt;br&gt;Я помогаю тебе вспомнить, кто ты на самом деле. А когда вспоминаешь — меняется всё.">But here's what matters: I don't fix you. You were never broken.<br><br>I help you remember who you actually are. And when you remember — everything changes.</p>
           <a href="my-story.html" class="link-arrow" data-en="Read My Full Story" data-ru="Читать мою историю">Read My Full Story</a>
         </div>
+        <div class="intro__image fade-in-right">
+          <img src="assets/portrait-natural.jpg" alt="Amelia Lira">
+        </div>
       </div>
     </div>
   </section>
 
   <!-- ========== 3. PAIN POINTS — Renew-style layout (left text + right CTA, 4 image cards) ========== -->
   <section class="section-pain">
-    <div class="pain__bg-text" data-en="AWAKEN" data-ru="ПРОБУЖДЕНИЕ">AWAKEN</div>
     <div class="container">
       <!-- Top row: heading + text LEFT, CTA button RIGHT -->
       <div class="pain__header">
